--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "nodemon server.js "
   },
   "dependencies": {
     "morgan": "^1.10.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "express": "^4.21.2",
     "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
     "react-router-dom": "^7.1.1",
     "vite": "^6.0.5"
   }
