--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "nodemon server.js "
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
     "express": "^4.21.2",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9",
+    "prisma": "^6.6.0",
     "react-router-dom": "^7.1.1",
     "vite": "^6.0.5"
   }
