--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "nodemon server.js "
   },
   "dependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "morgan": "^1.10.0",
@@ -37,5 +39,8 @@
     "prisma": "^6.6.0",
     "react-router-dom": "^7.1.1",
     "vite": "^6.0.5"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
