--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "nodemon server.js "
+    "start": "node server.js "
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
